improve template
