# controllers/company.go
@@ -1,7 +1,7 @@
 package controllers
 
 import (
-	"api1-new/pkg/db"
+	"api1-new/pkg/company"
 
 	"github.com/gin-gonic/gin"
 )
@@ -10,9 +10,14 @@ import (
 // @Summary      Get all companies
 // @Tags         companies
 // @Produce      json
-// @Success      200  {array}  db.company
+// @Success      200  {array}  company.company
+// @Failure      500  {string}  string
 // @Router       /companies [get]
 func GetCompanies(c *gin.Context) {
-	data := db.GetCompanies()
+	data, err := company.GetCompany()
+	if err != nil {
+		c.IndentedJSON(500, err)
+		return
+	}
 	c.IndentedJSON(200, data)
 }
