# docs/swagger.json
@@ -24,8 +24,14 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/db.company"
+                                "$ref": "#/definitions/company.company"
                             }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
                         }
                     }
                 }
@@ -48,6 +54,12 @@
                             "items": {
                                 "$ref": "#/definitions/person.Person"
                             }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
                         }
                     }
                 }
@@ -72,7 +84,7 @@
         }
     },
     "definitions": {
-        "db.company": {
+        "company.company": {
             "type": "object",
             "properties": {
                 "id": {
